// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`parse Arabia 1`] = `
Object {
  "activeLands": Array [
    0,
    1,
  ],
  "cliffHotspots": Array [
    Object {
      "radius": 15,
      "x": 81,
      "y": 80,
    },
    Object {
      "radius": 15,
      "x": 38,
      "y": 19,
    },
  ],
  "cliffs": Object {
    "maxLength": 10,
    "maxNumber": 15,
    "minLength": 3,
    "minNumber": 10,
  },
  "connections": Array [],
  "elevationHotspots": Array [
    Object {
      "fade": 20,
      "radius": 13,
      "x": 81,
      "y": 80,
    },
    Object {
      "fade": 20,
      "radius": 13,
      "x": 38,
      "y": 19,
    },
  ],
  "elevations": Array [
    Object {
      "baseElevation": 0,
      "baseTerrain": 6,
      "height": 0,
      "numberOfClumps": 20,
      "numberOfTiles": 8640,
      "scalingType": 2,
      "spacing": 2,
    },
    Object {
      "baseElevation": 1,
      "baseTerrain": 6,
      "height": 1,
      "numberOfClumps": 20,
      "numberOfTiles": 8640,
      "scalingType": 2,
      "spacing": 1,
    },
    Object {
      "baseElevation": 2,
      "baseTerrain": 6,
      "height": 2,
      "numberOfClumps": 20,
      "numberOfTiles": 8640,
      "scalingType": 2,
      "spacing": 1,
    },
    Object {
      "baseElevation": 3,
      "baseTerrain": 6,
      "height": 3,
      "numberOfClumps": 20,
      "numberOfTiles": 8640,
      "scalingType": 2,
      "spacing": 1,
    },
    Object {
      "baseElevation": 4,
      "baseTerrain": 6,
      "height": 4,
      "numberOfClumps": 20,
      "numberOfTiles": 8640,
      "scalingType": 2,
      "spacing": 1,
    },
    Object {
      "baseElevation": 5,
      "baseTerrain": 6,
      "height": 5,
      "numberOfClumps": 20,
      "numberOfTiles": 8640,
      "scalingType": 2,
      "spacing": 1,
    },
    Object {
      "baseElevation": 6,
      "baseTerrain": 6,
      "height": 6,
      "numberOfClumps": 20,
      "numberOfTiles": 8640,
      "scalingType": 2,
      "spacing": 1,
    },
  ],
  "landMeta": Object {
    "baseTerrain": 6,
  },
  "lands": Array [
    Object {
      "area": 0,
      "baseSize": 9,
      "borderFuzziness": 15,
      "bottomBorder": 120,
      "clumpiness": 8,
      "leftBorder": 0,
      "minPlacementDistance": -1,
      "position": Object {
        "x": 81,
        "y": 80,
      },
      "rightBorder": 120,
      "terrain": 6,
      "tiles": 1800,
      "topBorder": 0,
      "zone": 1,
    },
    Object {
      "area": 0,
      "baseSize": 9,
      "borderFuzziness": 15,
      "bottomBorder": 120,
      "clumpiness": 8,
      "leftBorder": 0,
      "minPlacementDistance": -1,
      "position": Object {
        "x": 38,
        "y": 19,
      },
      "rightBorder": 120,
      "terrain": 6,
      "tiles": 1800,
      "topBorder": 0,
      "zone": 2,
    },
  ],
  "objectHotspots": Array [
    Object {
      "id": 1,
      "playerId": 1,
      "x": 81,
      "y": 80,
    },
    Object {
      "id": 1,
      "playerId": 2,
      "x": 38,
      "y": 19,
    },
  ],
  "objects": Array [
    Object {
      "amount": 1,
      "baseTerrain": -1,
      "groupPlacementRadius": 18,
      "groupVariance": 0,
      "groupingType": 0,
      "landId": 1,
      "maxDistanceToOtherZones": 0,
      "maxDistanceToPlayers": 0,
      "minDistanceGroupPlacement": 0,
      "minDistanceToPlayers": 0,
      "numberOfGroups": 1,
      "playerId": -1,
      "scalingType": 0,
      "type": 109,
    },
    Object {
      "amount": 1,
      "baseTerrain": -1,
      "groupPlacementRadius": 3,
      "groupVariance": 0,
      "groupingType": 0,
      "landId": 1,
      "maxDistanceToOtherZones": 0,
      "maxDistanceToPlayers": 6,
      "minDistanceGroupPlacement": 0,
      "minDistanceToPlayers": 6,
      "numberOfGroups": 1,
      "playerId": -1,
      "scalingType": 0,
      "type": 83,
    },
    Object {
      "amount": 1,
      "baseTerrain": -1,
      "groupPlacementRadius": 3,
      "groupVariance": 0,
      "groupingType": 0,
      "landId": 1,
      "maxDistanceToOtherZones": 0,
      "maxDistanceToPlayers": 9,
      "minDistanceGroupPlacement": 0,
      "minDistanceToPlayers": 7,
      "numberOfGroups": 1,
      "playerId": -1,
      "scalingType": 0,
      "type": 448,
    },
    Object {
      "amount": 1,
      "baseTerrain": -1,
      "groupPlacementRadius": 3,
      "groupVariance": 0,
      "groupingType": 0,
      "landId": -2,
      "maxDistanceToOtherZones": 0,
      "maxDistanceToPlayers": -1,
      "minDistanceGroupPlacement": 0,
      "minDistanceToPlayers": 25,
      "numberOfGroups": 5,
      "playerId": -1,
      "scalingType": 0,
      "type": 285,
    },
    Object {
      "amount": 6,
      "baseTerrain": -1,
      "groupPlacementRadius": 3,
      "groupVariance": 0,
      "groupingType": 2,
      "landId": 1,
      "maxDistanceToOtherZones": 0,
      "maxDistanceToPlayers": 12,
      "minDistanceGroupPlacement": 6,
      "minDistanceToPlayers": 10,
      "numberOfGroups": 1,
      "playerId": 0,
      "scalingType": 0,
      "type": 59,
    },
    Object {
      "amount": 7,
      "baseTerrain": -1,
      "groupPlacementRadius": 3,
      "groupVariance": 0,
      "groupingType": 2,
      "landId": 1,
      "maxDistanceToOtherZones": 7,
      "maxDistanceToPlayers": 16,
      "minDistanceGroupPlacement": 7,
      "minDistanceToPlayers": 12,
      "numberOfGroups": 1,
      "playerId": 0,
      "scalingType": 0,
      "type": 66,
    },
    Object {
      "amount": 4,
      "baseTerrain": -1,
      "groupPlacementRadius": 3,
      "groupVariance": 0,
      "groupingType": 2,
      "landId": 1,
      "maxDistanceToOtherZones": 7,
      "maxDistanceToPlayers": 26,
      "minDistanceGroupPlacement": 7,
      "minDistanceToPlayers": 18,
      "numberOfGroups": 1,
      "playerId": 0,
      "scalingType": 0,
      "type": 66,
    },
    Object {
      "amount": 4,
      "baseTerrain": -1,
      "groupPlacementRadius": 3,
      "groupVariance": 0,
      "groupingType": 2,
      "landId": 1,
      "maxDistanceToOtherZones": 7,
      "maxDistanceToPlayers": 35,
      "minDistanceGroupPlacement": 7,
      "minDistanceToPlayers": 25,
      "numberOfGroups": 1,
      "playerId": 0,
      "scalingType": 0,
      "type": 66,
    },
    Object {
      "amount": 5,
      "baseTerrain": -1,
      "groupPlacementRadius": 2,
      "groupVariance": 0,
      "groupingType": 2,
      "landId": 1,
      "maxDistanceToOtherZones": 7,
      "maxDistanceToPlayers": 18,
      "minDistanceGroupPlacement": 7,
      "minDistanceToPlayers": 14,
      "numberOfGroups": 1,
      "playerId": 0,
      "scalingType": 0,
      "type": 102,
    },
    Object {
      "amount": 4,
      "baseTerrain": -1,
      "groupPlacementRadius": 2,
      "groupVariance": 0,
      "groupingType": 2,
      "landId": 1,
      "maxDistanceToOtherZones": 7,
      "maxDistanceToPlayers": 26,
      "minDistanceGroupPlacement": 7,
      "minDistanceToPlayers": 20,
      "numberOfGroups": 1,
      "playerId": 0,
      "scalingType": 0,
      "type": 102,
    },
    Object {
      "amount": 4,
      "baseTerrain": -1,
      "groupPlacementRadius": 3,
      "groupVariance": 0,
      "groupingType": 1,
      "landId": 1,
      "maxDistanceToOtherZones": 0,
      "maxDistanceToPlayers": 12,
      "minDistanceGroupPlacement": 0,
      "minDistanceToPlayers": 10,
      "numberOfGroups": 1,
      "playerId": 0,
      "scalingType": 0,
      "type": 594,
    },
    Object {
      "amount": 2,
      "baseTerrain": -1,
      "groupPlacementRadius": 3,
      "groupVariance": 0,
      "groupingType": 1,
      "landId": 1,
      "maxDistanceToOtherZones": 0,
      "maxDistanceToPlayers": 30,
      "minDistanceGroupPlacement": 0,
      "minDistanceToPlayers": 14,
      "numberOfGroups": 2,
      "playerId": 0,
      "scalingType": 0,
      "type": 594,
    },
    Object {
      "amount": 4,
      "baseTerrain": -1,
      "groupPlacementRadius": 3,
      "groupVariance": 1,
      "groupingType": 1,
      "landId": 1,
      "maxDistanceToOtherZones": 0,
      "maxDistanceToPlayers": 30,
      "minDistanceGroupPlacement": 0,
      "minDistanceToPlayers": 14,
      "numberOfGroups": 1,
      "playerId": 0,
      "scalingType": 0,
      "type": 65,
    },
    Object {
      "amount": 1,
      "baseTerrain": -1,
      "groupPlacementRadius": 3,
      "groupVariance": 0,
      "groupingType": 1,
      "landId": 1,
      "maxDistanceToOtherZones": 0,
      "maxDistanceToPlayers": 22,
      "minDistanceGroupPlacement": 0,
      "minDistanceToPlayers": 16,
      "numberOfGroups": 1,
      "playerId": 0,
      "scalingType": 0,
      "type": 48,
    },
    Object {
      "amount": 1,
      "baseTerrain": -1,
      "groupPlacementRadius": 3,
      "groupVariance": 0,
      "groupingType": 0,
      "landId": 1,
      "maxDistanceToOtherZones": 0,
      "maxDistanceToPlayers": 22,
      "minDistanceGroupPlacement": 0,
      "minDistanceToPlayers": 16,
      "numberOfGroups": 1,
      "playerId": 0,
      "scalingType": 0,
      "type": 48,
    },
    Object {
      "amount": 1,
      "baseTerrain": -1,
      "groupPlacementRadius": 3,
      "groupVariance": 0,
      "groupingType": 0,
      "landId": 1,
      "maxDistanceToOtherZones": 0,
      "maxDistanceToPlayers": 40,
      "minDistanceGroupPlacement": 0,
      "minDistanceToPlayers": 30,
      "numberOfGroups": 2,
      "playerId": 0,
      "scalingType": 0,
      "type": 126,
    },
    Object {
      "amount": 1,
      "baseTerrain": -1,
      "groupPlacementRadius": 3,
      "groupVariance": 0,
      "groupingType": 0,
      "landId": 1,
      "maxDistanceToOtherZones": 0,
      "maxDistanceToPlayers": 5,
      "minDistanceGroupPlacement": 2,
      "minDistanceToPlayers": 4,
      "numberOfGroups": 2,
      "playerId": 0,
      "scalingType": 0,
      "type": 351,
    },
    Object {
      "amount": 1,
      "baseTerrain": -1,
      "groupPlacementRadius": 3,
      "groupVariance": 0,
      "groupingType": 0,
      "landId": 1,
      "maxDistanceToOtherZones": 0,
      "maxDistanceToPlayers": 8,
      "minDistanceGroupPlacement": 2,
      "minDistanceToPlayers": 6,
      "numberOfGroups": 3,
      "playerId": 0,
      "scalingType": 0,
      "type": 351,
    },
    Object {
      "amount": 1,
      "baseTerrain": -1,
      "groupPlacementRadius": 3,
      "groupVariance": 0,
      "groupingType": 0,
      "landId": -1,
      "maxDistanceToOtherZones": 0,
      "maxDistanceToPlayers": -1,
      "minDistanceGroupPlacement": 0,
      "minDistanceToPlayers": -1,
      "numberOfGroups": 6,
      "playerId": -1,
      "scalingType": 1,
      "type": 96,
    },
    Object {
      "amount": 1,
      "baseTerrain": -1,
      "groupPlacementRadius": 3,
      "groupVariance": 0,
      "groupingType": 1,
      "landId": -2,
      "maxDistanceToOtherZones": 0,
      "maxDistanceToPlayers": 120,
      "minDistanceGroupPlacement": 12,
      "minDistanceToPlayers": 40,
      "numberOfGroups": 3,
      "playerId": 0,
      "scalingType": 1,
      "type": 126,
    },
    Object {
      "amount": 4,
      "baseTerrain": -1,
      "groupPlacementRadius": 3,
      "groupVariance": 1,
      "groupingType": 1,
      "landId": 1,
      "maxDistanceToOtherZones": 0,
      "maxDistanceToPlayers": -1,
      "minDistanceGroupPlacement": 0,
      "minDistanceToPlayers": 19,
      "numberOfGroups": 1,
      "playerId": 0,
      "scalingType": 0,
      "type": 65,
    },
    Object {
      "amount": 1,
      "baseTerrain": -1,
      "groupPlacementRadius": 3,
      "groupVariance": 0,
      "groupingType": 0,
      "landId": -2,
      "maxDistanceToOtherZones": 0,
      "maxDistanceToPlayers": -1,
      "minDistanceGroupPlacement": 0,
      "minDistanceToPlayers": 8,
      "numberOfGroups": 30,
      "playerId": 0,
      "scalingType": 1,
      "type": 351,
    },
    Object {
      "amount": 1,
      "baseTerrain": -1,
      "groupPlacementRadius": 3,
      "groupVariance": 0,
      "groupingType": 0,
      "landId": -1,
      "maxDistanceToOtherZones": 0,
      "maxDistanceToPlayers": -1,
      "minDistanceGroupPlacement": 5,
      "minDistanceToPlayers": -1,
      "numberOfGroups": 4,
      "playerId": 0,
      "scalingType": 1,
      "type": 69,
    },
  ],
  "sections": Array [
    "players",
    "land",
    "terrain",
    "objects",
    "elevation",
    "cliffs",
  ],
  "terrainHotspots": Array [
    Object {
      "fade": 20,
      "radius": 13,
      "x": 81,
      "y": 80,
    },
    Object {
      "fade": 20,
      "radius": 13,
      "x": 38,
      "y": 19,
    },
  ],
  "terrains": Array [
    Object {
      "avoidPlayerStartAreas": true,
      "baseTerrain": 6,
      "clumpiness": 20,
      "flatOnly": false,
      "maxHeight": 0,
      "minHeight": 0,
      "numberOfClumps": 10,
      "scalingType": 1,
      "spacingToOtherTerrainTypes": 5,
      "tiles": 1728,
      "type": 13,
    },
    Object {
      "avoidPlayerStartAreas": false,
      "baseTerrain": 6,
      "clumpiness": 20,
      "flatOnly": false,
      "maxHeight": 0,
      "minHeight": 0,
      "numberOfClumps": 23,
      "scalingType": 2,
      "spacingToOtherTerrainTypes": 0,
      "tiles": 2880,
      "type": 14,
    },
    Object {
      "avoidPlayerStartAreas": true,
      "baseTerrain": 6,
      "clumpiness": 20,
      "flatOnly": false,
      "maxHeight": 0,
      "minHeight": 0,
      "numberOfClumps": 3,
      "scalingType": 1,
      "spacingToOtherTerrainTypes": 3,
      "tiles": 144,
      "type": 10,
    },
    Object {
      "avoidPlayerStartAreas": false,
      "baseTerrain": 6,
      "clumpiness": 20,
      "flatOnly": false,
      "maxHeight": 0,
      "minHeight": 0,
      "numberOfClumps": 34,
      "scalingType": 2,
      "spacingToOtherTerrainTypes": 1,
      "tiles": 288,
      "type": 3,
    },
    Object {
      "avoidPlayerStartAreas": false,
      "baseTerrain": 6,
      "clumpiness": 20,
      "flatOnly": false,
      "maxHeight": 0,
      "minHeight": 0,
      "numberOfClumps": 43,
      "scalingType": 2,
      "spacingToOtherTerrainTypes": 1,
      "tiles": 288,
      "type": 9,
    },
    Object {
      "avoidPlayerStartAreas": true,
      "baseTerrain": 13,
      "clumpiness": 20,
      "flatOnly": true,
      "maxHeight": 0,
      "minHeight": 0,
      "numberOfClumps": 8,
      "scalingType": 1,
      "spacingToOtherTerrainTypes": 1,
      "tiles": 144,
      "type": 1,
    },
  ],
}
`;

exports[`parse FenCrazyV6n1 1`] = `
Object {
  "activeLands": Array [
    9,
    10,
  ],
  "cliffHotspots": Array [
    Object {
      "radius": 15,
      "x": 4,
      "y": 43,
    },
    Object {
      "radius": 15,
      "x": 76,
      "y": 9,
    },
    Object {
      "radius": 15,
      "x": 51,
      "y": 110,
    },
    Object {
      "radius": 15,
      "x": 42,
      "y": 28,
    },
    Object {
      "radius": 15,
      "x": 42,
      "y": 108,
    },
    Object {
      "radius": 15,
      "x": 114,
      "y": 72,
    },
    Object {
      "radius": 15,
      "x": 57,
      "y": 11,
    },
    Object {
      "radius": 15,
      "x": 73,
      "y": 107,
    },
    Object {
      "radius": 15,
      "x": 73,
      "y": 91,
    },
    Object {
      "radius": 15,
      "x": 75,
      "y": 48,
    },
    Object {
      "radius": 15,
      "x": 29,
      "y": 74,
    },
  ],
  "cliffs": Object {
    "curliness": 9,
    "maxLength": 12,
    "maxNumber": 8,
    "minDistanceBetweenCliffs": 5,
    "minLength": 4,
    "minNumber": 5,
  },
  "connections": Array [
    Object {
      "terrains": Array [
        Object {
          "replaceTerrain": -1,
          "terrainCost": 1,
          "terrainSize": 1,
          "terrainVariation": 0,
        },
        Object {
          "replaceTerrain": -1,
          "terrainCost": 1,
          "terrainSize": 1,
          "terrainVariation": 0,
        },
        Object {
          "replaceTerrain": -1,
          "terrainCost": 1,
          "terrainSize": 1,
          "terrainVariation": 0,
        },
        Object {
          "replaceTerrain": -1,
          "terrainCost": 1,
          "terrainSize": 1,
          "terrainVariation": 0,
        },
        Object {
          "replaceTerrain": -1,
          "terrainCost": 1,
          "terrainSize": 1,
          "terrainVariation": 0,
        },
        Object {
          "replaceTerrain": -1,
          "terrainCost": 1,
          "terrainSize": 1,
          "terrainVariation": 0,
        },
        Object {
          "replaceTerrain": -1,
          "terrainCost": 1,
          "terrainSize": 1,
          "terrainVariation": 0,
        },
        Object {
          "replaceTerrain": -1,
          "terrainCost": 1,
          "terrainSize": 1,
          "terrainVariation": 0,
        },
        Object {
          "replaceTerrain": -1,
          "terrainCost": 1,
          "terrainSize": 1,
          "terrainVariation": 0,
        },
        Object {
          "replaceTerrain": -1,
          "terrainCost": 1,
          "terrainSize": 1,
          "terrainVariation": 0,
        },
        Object {
          "replaceTerrain": -1,
          "terrainCost": 1,
          "terrainSize": 1,
          "terrainVariation": 0,
        },
        Object {
          "replaceTerrain": -1,
          "terrainCost": 1,
          "terrainSize": 1,
          "terrainVariation": 0,
        },
        Object {
          "replaceTerrain": -1,
          "terrainCost": 1,
          "terrainSize": 1,
          "terrainVariation": 0,
        },
        Object {
          "replaceTerrain": -1,
          "terrainCost": 1,
          "terrainSize": 1,
          "terrainVariation": 0,
        },
        Object {
          "replaceTerrain": -1,
          "terrainCost": 1,
          "terrainSize": 1,
          "terrainVariation": 0,
        },
        Object {
          "replaceTerrain": -1,
          "terrainCost": 1,
          "terrainSize": 1,
          "terrainVariation": 0,
        },
        Object {
          "replaceTerrain": -1,
          "terrainCost": 1,
          "terrainSize": 1,
          "terrainVariation": 0,
        },
        Object {
          "replaceTerrain": -1,
          "terrainCost": 1,
          "terrainSize": 1,
          "terrainVariation": 0,
        },
        Object {
          "replaceTerrain": -1,
          "terrainCost": 1,
          "terrainSize": 1,
          "terrainVariation": 0,
        },
        Object {
          "replaceTerrain": -1,
          "terrainCost": 1,
          "terrainSize": 1,
          "terrainVariation": 0,
        },
        Object {
          "replaceTerrain": -1,
          "terrainCost": 1,
          "terrainSize": 1,
          "terrainVariation": 0,
        },
        Object {
          "replaceTerrain": Token {
            "argTypes": Array [
              0,
              0,
              0,
              0,
            ],
            "id": null,
            "name": "MOSS_ROAD",
            "type": 2,
            "value": 39,
          },
          "terrainCost": 1,
          "terrainSize": 1,
          "terrainVariation": 0,
        },
        Object {
          "replaceTerrain": -1,
          "terrainCost": 1,
          "terrainSize": 1,
          "terrainVariation": 0,
        },
        Object {
          "replaceTerrain": -1,
          "terrainCost": 1,
          "terrainSize": 1,
          "terrainVariation": 0,
        },
        Object {
          "replaceTerrain": -1,
          "terrainCost": 1,
          "terrainSize": 1,
          "terrainVariation": 0,
        },
        Object {
          "replaceTerrain": -1,
          "terrainCost": 1,
          "terrainSize": 1,
          "terrainVariation": 0,
        },
        Object {
          "replaceTerrain": -1,
          "terrainCost": 1,
          "terrainSize": 1,
          "terrainVariation": 0,
        },
        Object {
          "replaceTerrain": -1,
          "terrainCost": 1,
          "terrainSize": 1,
          "terrainVariation": 0,
        },
        Object {
          "replaceTerrain": -1,
          "terrainCost": 1,
          "terrainSize": 1,
          "terrainVariation": 0,
        },
        Object {
          "replaceTerrain": -1,
          "terrainCost": 1,
          "terrainSize": 1,
          "terrainVariation": 0,
        },
        Object {
          "replaceTerrain": -1,
          "terrainCost": 1,
          "terrainSize": 1,
          "terrainVariation": 0,
        },
        Object {
          "replaceTerrain": -1,
          "terrainCost": 1,
          "terrainSize": 1,
          "terrainVariation": 0,
        },
        Object {
          "replaceTerrain": -1,
          "terrainCost": 1,
          "terrainSize": 1,
          "terrainVariation": 0,
        },
        Object {
          "replaceTerrain": -1,
          "terrainCost": 1,
          "terrainSize": 1,
          "terrainVariation": 0,
        },
        Object {
          "replaceTerrain": -1,
          "terrainCost": 1,
          "terrainSize": 1,
          "terrainVariation": 0,
        },
        Object {
          "replaceTerrain": -1,
          "terrainCost": 1,
          "terrainSize": 1,
          "terrainVariation": 0,
        },
        Object {
          "replaceTerrain": -1,
          "terrainCost": 1,
          "terrainSize": 1,
          "terrainVariation": 0,
        },
        Object {
          "replaceTerrain": -1,
          "terrainCost": 1,
          "terrainSize": 1,
          "terrainVariation": 0,
        },
        Object {
          "replaceTerrain": -1,
          "terrainCost": 1,
          "terrainSize": 1,
          "terrainVariation": 0,
        },
        Object {
          "replaceTerrain": -1,
          "terrainCost": 1,
          "terrainSize": 1,
          "terrainVariation": 0,
        },
        Object {
          "replaceTerrain": -1,
          "terrainCost": 1,
          "terrainSize": 1,
          "terrainVariation": 0,
        },
        Object {
          "replaceTerrain": -1,
          "terrainCost": 1,
          "terrainSize": 1,
          "terrainVariation": 0,
        },
        Object {
          "replaceTerrain": -1,
          "terrainCost": 1,
          "terrainSize": 1,
          "terrainVariation": 0,
        },
        Object {
          "replaceTerrain": -1,
          "terrainCost": 1,
          "terrainSize": 1,
          "terrainVariation": 0,
        },
        Object {
          "replaceTerrain": -1,
          "terrainCost": 1,
          "terrainSize": 1,
          "terrainVariation": 0,
        },
        Object {
          "replaceTerrain": -1,
          "terrainCost": 1,
          "terrainSize": 1,
          "terrainVariation": 0,
        },
        Object {
          "replaceTerrain": -1,
          "terrainCost": 1,
          "terrainSize": 1,
          "terrainVariation": 0,
        },
        Object {
          "replaceTerrain": -1,
          "terrainCost": 1,
          "terrainSize": 1,
          "terrainVariation": 0,
        },
        Object {
          "replaceTerrain": -1,
          "terrainCost": 1,
          "terrainSize": 1,
          "terrainVariation": 0,
        },
        Object {
          "replaceTerrain": -1,
          "terrainCost": 1,
          "terrainSize": 1,
          "terrainVariation": 0,
        },
        Object {
          "replaceTerrain": -1,
          "terrainCost": 1,
          "terrainSize": 1,
          "terrainVariation": 0,
        },
        Object {
          "replaceTerrain": -1,
          "terrainCost": 1,
          "terrainSize": 1,
          "terrainVariation": 0,
        },
        Object {
          "replaceTerrain": -1,
          "terrainCost": 1,
          "terrainSize": 1,
          "terrainVariation": 0,
        },
        Object {
          "replaceTerrain": -1,
          "terrainCost": 1,
          "terrainSize": 1,
          "terrainVariation": 0,
        },
        Object {
          "replaceTerrain": -1,
          "terrainCost": 1,
          "terrainSize": 1,
          "terrainVariation": 0,
        },
        Object {
          "replaceTerrain": -1,
          "terrainCost": 1,
          "terrainSize": 1,
          "terrainVariation": 0,
        },
        Object {
          "replaceTerrain": -1,
          "terrainCost": 1,
          "terrainSize": 1,
          "terrainVariation": 0,
        },
        Object {
          "replaceTerrain": -1,
          "terrainCost": 1,
          "terrainSize": 1,
          "terrainVariation": 0,
        },
        Object {
          "replaceTerrain": -1,
          "terrainCost": 1,
          "terrainSize": 1,
          "terrainVariation": 0,
        },
        Object {
          "replaceTerrain": -1,
          "terrainCost": 1,
          "terrainSize": 1,
          "terrainVariation": 0,
        },
        Object {
          "replaceTerrain": -1,
          "terrainCost": 1,
          "terrainSize": 1,
          "terrainVariation": 0,
        },
        Object {
          "replaceTerrain": -1,
          "terrainCost": 1,
          "terrainSize": 1,
          "terrainVariation": 0,
        },
        Object {
          "replaceTerrain": -1,
          "terrainCost": 1,
          "terrainSize": 1,
          "terrainVariation": 0,
        },
        Object {
          "replaceTerrain": -1,
          "terrainCost": 1,
          "terrainSize": 1,
          "terrainVariation": 0,
        },
        Object {
          "replaceTerrain": -1,
          "terrainCost": 1,
          "terrainSize": 1,
          "terrainVariation": 0,
        },
        Object {
          "replaceTerrain": -1,
          "terrainCost": 1,
          "terrainSize": 1,
          "terrainVariation": 0,
        },
        Object {
          "replaceTerrain": -1,
          "terrainCost": 1,
          "terrainSize": 1,
          "terrainVariation": 0,
        },
        Object {
          "replaceTerrain": -1,
          "terrainCost": 1,
          "terrainSize": 1,
          "terrainVariation": 0,
        },
        Object {
          "replaceTerrain": -1,
          "terrainCost": 1,
          "terrainSize": 1,
          "terrainVariation": 0,
        },
        Object {
          "replaceTerrain": -1,
          "terrainCost": 1,
          "terrainSize": 1,
          "terrainVariation": 0,
        },
        Object {
          "replaceTerrain": -1,
          "terrainCost": 1,
          "terrainSize": 1,
          "terrainVariation": 0,
        },
        Object {
          "replaceTerrain": -1,
          "terrainCost": 1,
          "terrainSize": 1,
          "terrainVariation": 0,
        },
        Object {
          "replaceTerrain": -1,
          "terrainCost": 1,
          "terrainSize": 1,
          "terrainVariation": 0,
        },
        Object {
          "replaceTerrain": -1,
          "terrainCost": 1,
          "terrainSize": 1,
          "terrainVariation": 0,
        },
        Object {
          "replaceTerrain": -1,
          "terrainCost": 1,
          "terrainSize": 1,
          "terrainVariation": 0,
        },
        Object {
          "replaceTerrain": -1,
          "terrainCost": 1,
          "terrainSize": 1,
          "terrainVariation": 0,
        },
        Object {
          "replaceTerrain": -1,
          "terrainCost": 1,
          "terrainSize": 1,
          "terrainVariation": 0,
        },
        Object {
          "replaceTerrain": -1,
          "terrainCost": 1,
          "terrainSize": 1,
          "terrainVariation": 0,
        },
        Object {
          "replaceTerrain": -1,
          "terrainCost": 1,
          "terrainSize": 1,
          "terrainVariation": 0,
        },
        Object {
          "replaceTerrain": -1,
          "terrainCost": 1,
          "terrainSize": 1,
          "terrainVariation": 0,
        },
        Object {
          "replaceTerrain": -1,
          "terrainCost": 1,
          "terrainSize": 1,
          "terrainVariation": 0,
        },
        Object {
          "replaceTerrain": -1,
          "terrainCost": 1,
          "terrainSize": 1,
          "terrainVariation": 0,
        },
        Object {
          "replaceTerrain": -1,
          "terrainCost": 1,
          "terrainSize": 1,
          "terrainVariation": 0,
        },
        Object {
          "replaceTerrain": -1,
          "terrainCost": 1,
          "terrainSize": 1,
          "terrainVariation": 0,
        },
        Object {
          "replaceTerrain": -1,
          "terrainCost": 1,
          "terrainSize": 1,
          "terrainVariation": 0,
        },
        Object {
          "replaceTerrain": -1,
          "terrainCost": 1,
          "terrainSize": 1,
          "terrainVariation": 0,
        },
        Object {
          "replaceTerrain": -1,
          "terrainCost": 1,
          "terrainSize": 1,
          "terrainVariation": 0,
        },
        Object {
          "replaceTerrain": -1,
          "terrainCost": 1,
          "terrainSize": 1,
          "terrainVariation": 0,
        },
        Object {
          "replaceTerrain": -1,
          "terrainCost": 1,
          "terrainSize": 1,
          "terrainVariation": 0,
        },
        Object {
          "replaceTerrain": -1,
          "terrainCost": 1,
          "terrainSize": 1,
          "terrainVariation": 0,
        },
        Object {
          "replaceTerrain": -1,
          "terrainCost": 1,
          "terrainSize": 1,
          "terrainVariation": 0,
        },
        Object {
          "replaceTerrain": -1,
          "terrainCost": 1,
          "terrainSize": 1,
          "terrainVariation": 0,
        },
        Object {
          "replaceTerrain": -1,
          "terrainCost": 1,
          "terrainSize": 1,
          "terrainVariation": 0,
        },
        Object {
          "replaceTerrain": -1,
          "terrainCost": 1,
          "terrainSize": 1,
          "terrainVariation": 0,
        },
        Object {
          "replaceTerrain": -1,
          "terrainCost": 1,
          "terrainSize": 1,
          "terrainVariation": 0,
        },
        Object {
          "replaceTerrain": -1,
          "terrainCost": 1,
          "terrainSize": 1,
          "terrainVariation": 0,
        },
        Object {
          "replaceTerrain": -1,
          "terrainCost": 1,
          "terrainSize": 1,
          "terrainVariation": 0,
        },
        Object {
          "replaceTerrain": -1,
          "terrainCost": 1,
          "terrainSize": 1,
          "terrainVariation": 0,
        },
        Object {
          "replaceTerrain": -1,
          "terrainCost": 1,
          "terrainSize": 1,
          "terrainVariation": 0,
        },
      ],
      "type": 66,
    },
  ],
  "elevationHotspots": Array [
    Object {
      "fade": 20,
      "radius": 13,
      "x": 75,
      "y": 48,
    },
    Object {
      "fade": 20,
      "radius": 13,
      "x": 29,
      "y": 74,
    },
  ],
  "elevations": Array [
    Object {
      "baseElevation": 0,
      "baseTerrain": 34,
      "height": 0,
      "numberOfClumps": 1,
      "numberOfTiles": 172,
      "scalingType": 2,
      "spacing": 2,
    },
    Object {
      "baseElevation": 1,
      "baseTerrain": 34,
      "height": 1,
      "numberOfClumps": 1,
      "numberOfTiles": 172,
      "scalingType": 2,
      "spacing": 1,
    },
    Object {
      "baseElevation": 2,
      "baseTerrain": 34,
      "height": 2,
      "numberOfClumps": 1,
      "numberOfTiles": 172,
      "scalingType": 2,
      "spacing": 1,
    },
    Object {
      "baseElevation": 3,
      "baseTerrain": 34,
      "height": 3,
      "numberOfClumps": 1,
      "numberOfTiles": 172,
      "scalingType": 2,
      "spacing": 1,
    },
    Object {
      "baseElevation": 4,
      "baseTerrain": 34,
      "height": 4,
      "numberOfClumps": 1,
      "numberOfTiles": 172,
      "scalingType": 2,
      "spacing": 1,
    },
    Object {
      "baseElevation": 5,
      "baseTerrain": 34,
      "height": 5,
      "numberOfClumps": 1,
      "numberOfTiles": 172,
      "scalingType": 2,
      "spacing": 1,
    },
  ],
  "landMeta": Object {
    "baseTerrain": 21,
  },
  "lands": Array [
    Object {
      "area": 0,
      "baseSize": 3,
      "borderFuzziness": 13,
      "bottomBorder": 120,
      "clumpiness": 3,
      "leftBorder": 0,
      "minPlacementDistance": -1,
      "position": Object {
        "x": 4,
        "y": 43,
      },
      "rightBorder": 120,
      "terrain": 1,
      "tiles": 96,
      "topBorder": 0,
      "zone": 0,
    },
    Object {
      "area": 0,
      "baseSize": 3,
      "borderFuzziness": 13,
      "bottomBorder": 120,
      "clumpiness": 3,
      "leftBorder": 0,
      "minPlacementDistance": -1,
      "position": Object {
        "x": 76,
        "y": 9,
      },
      "rightBorder": 120,
      "terrain": 1,
      "tiles": 96,
      "topBorder": 0,
      "zone": 0,
    },
    Object {
      "area": 0,
      "baseSize": 3,
      "borderFuzziness": 13,
      "bottomBorder": 120,
      "clumpiness": 3,
      "leftBorder": 0,
      "minPlacementDistance": -1,
      "position": Object {
        "x": 51,
        "y": 110,
      },
      "rightBorder": 120,
      "terrain": 1,
      "tiles": 96,
      "topBorder": 0,
      "zone": 0,
    },
    Object {
      "area": 0,
      "baseSize": 3,
      "borderFuzziness": 13,
      "bottomBorder": 120,
      "clumpiness": 3,
      "leftBorder": 0,
      "minPlacementDistance": -1,
      "position": Object {
        "x": 42,
        "y": 28,
      },
      "rightBorder": 120,
      "terrain": 1,
      "tiles": 96,
      "topBorder": 0,
      "zone": 0,
    },
    Object {
      "area": 0,
      "baseSize": 3,
      "borderFuzziness": 13,
      "bottomBorder": 120,
      "clumpiness": 3,
      "leftBorder": 0,
      "minPlacementDistance": -1,
      "position": Object {
        "x": 42,
        "y": 108,
      },
      "rightBorder": 120,
      "terrain": 1,
      "tiles": 96,
      "topBorder": 0,
      "zone": 0,
    },
    Object {
      "area": 0,
      "baseSize": 3,
      "borderFuzziness": 13,
      "bottomBorder": 120,
      "clumpiness": 3,
      "leftBorder": 0,
      "minPlacementDistance": -1,
      "position": Object {
        "x": 114,
        "y": 72,
      },
      "rightBorder": 120,
      "terrain": 1,
      "tiles": 96,
      "topBorder": 0,
      "zone": 0,
    },
    Object {
      "area": 0,
      "baseSize": 3,
      "borderFuzziness": 13,
      "bottomBorder": 120,
      "clumpiness": 3,
      "leftBorder": 0,
      "minPlacementDistance": -1,
      "position": Object {
        "x": 57,
        "y": 11,
      },
      "rightBorder": 120,
      "terrain": 1,
      "tiles": 96,
      "topBorder": 0,
      "zone": 0,
    },
    Object {
      "area": 0,
      "baseSize": 3,
      "borderFuzziness": 13,
      "bottomBorder": 120,
      "clumpiness": 3,
      "leftBorder": 0,
      "minPlacementDistance": -1,
      "position": Object {
        "x": 73,
        "y": 107,
      },
      "rightBorder": 120,
      "terrain": 1,
      "tiles": 96,
      "topBorder": 0,
      "zone": 0,
    },
    Object {
      "area": 0,
      "baseSize": 3,
      "borderFuzziness": 13,
      "bottomBorder": 120,
      "clumpiness": 3,
      "leftBorder": 0,
      "minPlacementDistance": -1,
      "position": Object {
        "x": 73,
        "y": 91,
      },
      "rightBorder": 120,
      "terrain": 1,
      "tiles": 96,
      "topBorder": 0,
      "zone": 0,
    },
    Object {
      "area": 4,
      "baseSize": 22,
      "borderFuzziness": 13,
      "bottomBorder": 116.4,
      "clumpiness": 3,
      "leftBorder": 0,
      "minPlacementDistance": -1,
      "position": Object {
        "x": 75,
        "y": 48,
      },
      "rightBorder": 120,
      "terrain": 34,
      "tiles": 5183.999999999999,
      "topBorder": 3.6,
      "zone": 1,
    },
    Object {
      "area": 4,
      "baseSize": 22,
      "borderFuzziness": 13,
      "bottomBorder": 116.4,
      "clumpiness": 3,
      "leftBorder": 0,
      "minPlacementDistance": -1,
      "position": Object {
        "x": 29,
        "y": 74,
      },
      "rightBorder": 120,
      "terrain": 34,
      "tiles": 5183.999999999999,
      "topBorder": 3.6,
      "zone": 2,
    },
  ],
  "objectHotspots": Array [
    Object {
      "id": 0,
      "playerId": 0,
      "x": 4,
      "y": 43,
    },
    Object {
      "id": 0,
      "playerId": 0,
      "x": 76,
      "y": 9,
    },
    Object {
      "id": 0,
      "playerId": 0,
      "x": 51,
      "y": 110,
    },
    Object {
      "id": 0,
      "playerId": 0,
      "x": 42,
      "y": 28,
    },
    Object {
      "id": 0,
      "playerId": 0,
      "x": 42,
      "y": 108,
    },
    Object {
      "id": 0,
      "playerId": 0,
      "x": 114,
      "y": 72,
    },
    Object {
      "id": 0,
      "playerId": 0,
      "x": 57,
      "y": 11,
    },
    Object {
      "id": 0,
      "playerId": 0,
      "x": 73,
      "y": 107,
    },
    Object {
      "id": 0,
      "playerId": 0,
      "x": 73,
      "y": 91,
    },
    Object {
      "id": 1,
      "playerId": 1,
      "x": 75,
      "y": 48,
    },
    Object {
      "id": 1,
      "playerId": 2,
      "x": 29,
      "y": 74,
    },
  ],
  "objects": Array [
    Object {
      "amount": 1,
      "baseTerrain": -1,
      "groupPlacementRadius": 3,
      "groupVariance": 0,
      "groupingType": 0,
      "landId": 1,
      "maxDistanceToOtherZones": 0,
      "maxDistanceToPlayers": 12,
      "minDistanceGroupPlacement": 0,
      "minDistanceToPlayers": 7,
      "numberOfGroups": 2,
      "playerId": -1,
      "scalingType": 0,
      "type": 12,
    },
    Object {
      "amount": 1,
      "baseTerrain": -1,
      "groupPlacementRadius": 3,
      "groupVariance": 0,
      "groupingType": 0,
      "landId": 1,
      "maxDistanceToOtherZones": 0,
      "maxDistanceToPlayers": 14,
      "minDistanceGroupPlacement": 0,
      "minDistanceToPlayers": 6,
      "numberOfGroups": 0,
      "playerId": -1,
      "scalingType": 0,
      "type": 0,
    },
    Object {
      "amount": 1,
      "baseTerrain": -1,
      "groupPlacementRadius": 3,
      "groupVariance": 0,
      "groupingType": 0,
      "landId": 1,
      "maxDistanceToOtherZones": 0,
      "maxDistanceToPlayers": 0,
      "minDistanceGroupPlacement": 0,
      "minDistanceToPlayers": 0,
      "numberOfGroups": 1,
      "playerId": -1,
      "scalingType": 0,
      "type": 109,
    },
    Object {
      "amount": 1,
      "baseTerrain": -1,
      "groupPlacementRadius": 3,
      "groupVariance": 0,
      "groupingType": 0,
      "landId": 1,
      "maxDistanceToOtherZones": 0,
      "maxDistanceToPlayers": 6,
      "minDistanceGroupPlacement": 0,
      "minDistanceToPlayers": 6,
      "numberOfGroups": 1,
      "playerId": -1,
      "scalingType": 0,
      "type": 83,
    },
    Object {
      "amount": 1,
      "baseTerrain": -1,
      "groupPlacementRadius": 3,
      "groupVariance": 0,
      "groupingType": 0,
      "landId": 1,
      "maxDistanceToOtherZones": 0,
      "maxDistanceToPlayers": 6,
      "minDistanceGroupPlacement": 0,
      "minDistanceToPlayers": 0,
      "numberOfGroups": 0,
      "playerId": -1,
      "scalingType": 0,
      "type": 83,
    },
    Object {
      "amount": 1,
      "baseTerrain": -1,
      "groupPlacementRadius": 3,
      "groupVariance": 0,
      "groupingType": 0,
      "landId": 1,
      "maxDistanceToOtherZones": 0,
      "maxDistanceToPlayers": 14,
      "minDistanceGroupPlacement": 10,
      "minDistanceToPlayers": 10,
      "numberOfGroups": 1,
      "playerId": 0,
      "scalingType": 0,
      "type": 83,
    },
    Object {
      "amount": 1,
      "baseTerrain": -1,
      "groupPlacementRadius": 3,
      "groupVariance": 0,
      "groupingType": 0,
      "landId": 1,
      "maxDistanceToOtherZones": 0,
      "maxDistanceToPlayers": 9,
      "minDistanceGroupPlacement": 0,
      "minDistanceToPlayers": 7,
      "numberOfGroups": 1,
      "playerId": -1,
      "scalingType": 0,
      "type": 448,
    },
    Object {
      "amount": 1,
      "baseTerrain": -1,
      "groupPlacementRadius": 3,
      "groupVariance": 0,
      "groupingType": 0,
      "landId": -2,
      "maxDistanceToOtherZones": 0,
      "maxDistanceToPlayers": -1,
      "minDistanceGroupPlacement": 0,
      "minDistanceToPlayers": 25,
      "numberOfGroups": 7,
      "playerId": -1,
      "scalingType": 0,
      "type": 285,
    },
    Object {
      "amount": 8,
      "baseTerrain": -1,
      "groupPlacementRadius": 8,
      "groupVariance": 0,
      "groupingType": 1,
      "landId": 1,
      "maxDistanceToOtherZones": 0,
      "maxDistanceToPlayers": 14,
      "minDistanceGroupPlacement": 5,
      "minDistanceToPlayers": 10,
      "numberOfGroups": 1,
      "playerId": 0,
      "scalingType": 0,
      "type": 594,
    },
    Object {
      "amount": 4,
      "baseTerrain": -1,
      "groupPlacementRadius": 3,
      "groupVariance": 0,
      "groupingType": 1,
      "landId": 1,
      "maxDistanceToOtherZones": 0,
      "maxDistanceToPlayers": 20,
      "minDistanceGroupPlacement": 5,
      "minDistanceToPlayers": 16,
      "numberOfGroups": 3,
      "playerId": 0,
      "scalingType": 0,
      "type": 594,
    },
    Object {
      "amount": 6,
      "baseTerrain": -1,
      "groupPlacementRadius": 3,
      "groupVariance": 0,
      "groupingType": 2,
      "landId": 1,
      "maxDistanceToOtherZones": 7,
      "maxDistanceToPlayers": 12,
      "minDistanceGroupPlacement": 7,
      "minDistanceToPlayers": 9,
      "numberOfGroups": 1,
      "playerId": 0,
      "scalingType": 0,
      "type": 59,
    },
    Object {
      "amount": 6,
      "baseTerrain": -1,
      "groupPlacementRadius": 3,
      "groupVariance": 0,
      "groupingType": 2,
      "landId": 1,
      "maxDistanceToOtherZones": 7,
      "maxDistanceToPlayers": 14,
      "minDistanceGroupPlacement": 7,
      "minDistanceToPlayers": 10,
      "numberOfGroups": 1,
      "playerId": 0,
      "scalingType": 0,
      "type": 66,
    },
    Object {
      "amount": 4,
      "baseTerrain": -1,
      "groupPlacementRadius": 2,
      "groupVariance": 0,
      "groupingType": 2,
      "landId": 1,
      "maxDistanceToOtherZones": 7,
      "maxDistanceToPlayers": 20,
      "minDistanceGroupPlacement": 7,
      "minDistanceToPlayers": 15,
      "numberOfGroups": 1,
      "playerId": 0,
      "scalingType": 0,
      "type": 66,
    },
    Object {
      "amount": 4,
      "baseTerrain": -1,
      "groupPlacementRadius": 2,
      "groupVariance": 0,
      "groupingType": 2,
      "landId": 1,
      "maxDistanceToOtherZones": 7,
      "maxDistanceToPlayers": 20,
      "minDistanceGroupPlacement": 7,
      "minDistanceToPlayers": 10,
      "numberOfGroups": 1,
      "playerId": 0,
      "scalingType": 0,
      "type": 102,
    },
    Object {
      "amount": 4,
      "baseTerrain": -1,
      "groupPlacementRadius": 2,
      "groupVariance": 0,
      "groupingType": 2,
      "landId": 1,
      "maxDistanceToOtherZones": 7,
      "maxDistanceToPlayers": 30,
      "minDistanceGroupPlacement": 7,
      "minDistanceToPlayers": 20,
      "numberOfGroups": 1,
      "playerId": 0,
      "scalingType": 0,
      "type": 66,
    },
    Object {
      "amount": 4,
      "baseTerrain": -1,
      "groupPlacementRadius": 2,
      "groupVariance": 0,
      "groupingType": 2,
      "landId": 1,
      "maxDistanceToOtherZones": 7,
      "maxDistanceToPlayers": 27,
      "minDistanceGroupPlacement": 7,
      "minDistanceToPlayers": 20,
      "numberOfGroups": 1,
      "playerId": 0,
      "scalingType": 0,
      "type": 102,
    },
    Object {
      "amount": 1,
      "baseTerrain": -1,
      "groupPlacementRadius": 3,
      "groupVariance": 0,
      "groupingType": 1,
      "landId": 1,
      "maxDistanceToOtherZones": 0,
      "maxDistanceToPlayers": 30,
      "minDistanceGroupPlacement": 0,
      "minDistanceToPlayers": 14,
      "numberOfGroups": 1,
      "playerId": 0,
      "scalingType": 0,
      "type": 65,
    },
    Object {
      "amount": 1,
      "baseTerrain": -1,
      "groupPlacementRadius": 3,
      "groupVariance": 0,
      "groupingType": 0,
      "landId": 1,
      "maxDistanceToOtherZones": 0,
      "maxDistanceToPlayers": 40,
      "minDistanceGroupPlacement": 12,
      "minDistanceToPlayers": 24,
      "numberOfGroups": 1,
      "playerId": 0,
      "scalingType": 0,
      "type": 126,
    },
    Object {
      "amount": 1,
      "baseTerrain": -1,
      "groupPlacementRadius": 3,
      "groupVariance": 0,
      "groupingType": 0,
      "landId": -1,
      "maxDistanceToOtherZones": 4,
      "maxDistanceToPlayers": -1,
      "minDistanceGroupPlacement": 4,
      "minDistanceToPlayers": -1,
      "numberOfGroups": 9,
      "playerId": 0,
      "scalingType": 1,
      "type": 458,
    },
    Object {
      "amount": 1,
      "baseTerrain": -1,
      "groupPlacementRadius": 3,
      "groupVariance": 0,
      "groupingType": 0,
      "landId": -1,
      "maxDistanceToOtherZones": 4,
      "maxDistanceToPlayers": -1,
      "minDistanceGroupPlacement": 4,
      "minDistanceToPlayers": -1,
      "numberOfGroups": 9,
      "playerId": 0,
      "scalingType": 1,
      "type": 458,
    },
    Object {
      "amount": 1,
      "baseTerrain": -1,
      "groupPlacementRadius": 3,
      "groupVariance": 0,
      "groupingType": 0,
      "landId": -1,
      "maxDistanceToOtherZones": 0,
      "maxDistanceToPlayers": -1,
      "minDistanceGroupPlacement": 3,
      "minDistanceToPlayers": -1,
      "numberOfGroups": 30,
      "playerId": 0,
      "scalingType": 1,
      "type": 69,
    },
    Object {
      "amount": 1,
      "baseTerrain": -1,
      "groupPlacementRadius": 3,
      "groupVariance": 0,
      "groupingType": 0,
      "landId": -2,
      "maxDistanceToOtherZones": 0,
      "maxDistanceToPlayers": -1,
      "minDistanceGroupPlacement": 0,
      "minDistanceToPlayers": 8,
      "numberOfGroups": 15,
      "playerId": 0,
      "scalingType": 1,
      "type": 413,
    },
    Object {
      "amount": 1,
      "baseTerrain": -1,
      "groupPlacementRadius": 3,
      "groupVariance": 0,
      "groupingType": 0,
      "landId": -2,
      "maxDistanceToOtherZones": 0,
      "maxDistanceToPlayers": -1,
      "minDistanceGroupPlacement": 0,
      "minDistanceToPlayers": 8,
      "numberOfGroups": 15,
      "playerId": 0,
      "scalingType": 1,
      "type": 413,
    },
    Object {
      "amount": 3,
      "baseTerrain": -1,
      "groupPlacementRadius": 3,
      "groupVariance": 0,
      "groupingType": 1,
      "landId": -2,
      "maxDistanceToOtherZones": 0,
      "maxDistanceToPlayers": 120,
      "minDistanceGroupPlacement": 10,
      "minDistanceToPlayers": 40,
      "numberOfGroups": 4,
      "playerId": 0,
      "scalingType": 1,
      "type": 594,
    },
    Object {
      "amount": 1,
      "baseTerrain": -1,
      "groupPlacementRadius": 3,
      "groupVariance": 0,
      "groupingType": 0,
      "landId": 1,
      "maxDistanceToOtherZones": 0,
      "maxDistanceToPlayers": 5,
      "minDistanceGroupPlacement": 2,
      "minDistanceToPlayers": 4,
      "numberOfGroups": 2,
      "playerId": 0,
      "scalingType": 0,
      "type": 413,
    },
    Object {
      "amount": 1,
      "baseTerrain": -1,
      "groupPlacementRadius": 3,
      "groupVariance": 0,
      "groupingType": 0,
      "landId": 1,
      "maxDistanceToOtherZones": 0,
      "maxDistanceToPlayers": 8,
      "minDistanceGroupPlacement": 2,
      "minDistanceToPlayers": 6,
      "numberOfGroups": 3,
      "playerId": 0,
      "scalingType": 0,
      "type": 413,
    },
  ],
  "sections": Array [
    "players",
    "land",
    "terrain",
    "objects",
    "elevation",
    "cliffs",
    "connections",
  ],
  "terrainHotspots": Array [
    Object {
      "fade": 20,
      "radius": 13,
      "x": 75,
      "y": 48,
    },
    Object {
      "fade": 20,
      "radius": 13,
      "x": 29,
      "y": 74,
    },
  ],
  "terrains": Array [
    Object {
      "avoidPlayerStartAreas": false,
      "baseTerrain": 1,
      "clumpiness": 20,
      "flatOnly": false,
      "maxHeight": 0,
      "minHeight": 0,
      "numberOfClumps": 3,
      "scalingType": 1,
      "spacingToOtherTerrainTypes": 3,
      "tiles": 432,
      "type": 23,
    },
    Object {
      "avoidPlayerStartAreas": false,
      "baseTerrain": 23,
      "clumpiness": 20,
      "flatOnly": false,
      "maxHeight": 0,
      "minHeight": 0,
      "numberOfClumps": 6,
      "scalingType": 1,
      "spacingToOtherTerrainTypes": 5,
      "tiles": 288,
      "type": 22,
    },
    Object {
      "avoidPlayerStartAreas": true,
      "baseTerrain": 34,
      "clumpiness": 20,
      "flatOnly": false,
      "maxHeight": 0,
      "minHeight": 0,
      "numberOfClumps": 17,
      "scalingType": 1,
      "spacingToOtherTerrainTypes": 4,
      "tiles": 1584,
      "type": 21,
    },
    Object {
      "avoidPlayerStartAreas": true,
      "baseTerrain": 32,
      "clumpiness": 20,
      "flatOnly": false,
      "maxHeight": 0,
      "minHeight": 0,
      "numberOfClumps": 10,
      "scalingType": 1,
      "spacingToOtherTerrainTypes": 5,
      "tiles": 864,
      "type": 34,
    },
    Object {
      "avoidPlayerStartAreas": true,
      "baseTerrain": 32,
      "clumpiness": 20,
      "flatOnly": false,
      "maxHeight": 0,
      "minHeight": 0,
      "numberOfClumps": 7,
      "scalingType": 1,
      "spacingToOtherTerrainTypes": 3,
      "tiles": 432,
      "type": 21,
    },
    Object {
      "avoidPlayerStartAreas": true,
      "baseTerrain": 34,
      "clumpiness": 20,
      "flatOnly": false,
      "maxHeight": 0,
      "minHeight": 0,
      "numberOfClumps": 1,
      "scalingType": 2,
      "spacingToOtherTerrainTypes": 3,
      "tiles": 288,
      "type": 35,
    },
  ],
}
`;

exports[`parse Relic Nothing 1`] = `
Object {
  "activeLands": Array [
    0,
    1,
  ],
  "cliffHotspots": Array [
    Object {
      "radius": 15,
      "x": 84,
      "y": 83,
    },
    Object {
      "radius": 15,
      "x": 35,
      "y": 12,
    },
  ],
  "cliffs": Object {},
  "connections": Array [],
  "elevationHotspots": Array [
    Object {
      "fade": 20,
      "radius": 13,
      "x": 84,
      "y": 83,
    },
    Object {
      "fade": 20,
      "radius": 13,
      "x": 35,
      "y": 12,
    },
  ],
  "elevations": Array [],
  "landMeta": Object {
    "baseTerrain": 0,
  },
  "lands": Array [
    Object {
      "area": 0,
      "baseSize": 1,
      "borderFuzziness": 1,
      "bottomBorder": 120,
      "clumpiness": 8,
      "leftBorder": 0,
      "minPlacementDistance": -1,
      "position": Object {
        "x": 84,
        "y": 83,
      },
      "rightBorder": 120,
      "terrain": 0,
      "tiles": 72,
      "topBorder": 0,
      "zone": 1,
    },
    Object {
      "area": 0,
      "baseSize": 1,
      "borderFuzziness": 1,
      "bottomBorder": 120,
      "clumpiness": 8,
      "leftBorder": 0,
      "minPlacementDistance": -1,
      "position": Object {
        "x": 35,
        "y": 12,
      },
      "rightBorder": 120,
      "terrain": 0,
      "tiles": 72,
      "topBorder": 0,
      "zone": 2,
    },
  ],
  "objectHotspots": Array [
    Object {
      "id": 1,
      "playerId": 1,
      "x": 84,
      "y": 83,
    },
    Object {
      "id": 1,
      "playerId": 2,
      "x": 35,
      "y": 12,
    },
  ],
  "objects": Array [
    Object {
      "amount": 1,
      "baseTerrain": -1,
      "groupPlacementRadius": 1,
      "groupVariance": 0,
      "groupingType": 0,
      "landId": 1,
      "maxDistanceToOtherZones": 0,
      "maxDistanceToPlayers": 0,
      "minDistanceGroupPlacement": 0,
      "minDistanceToPlayers": 0,
      "numberOfGroups": 1,
      "playerId": -1,
      "scalingType": 0,
      "type": 109,
    },
    Object {
      "amount": 1,
      "baseTerrain": -1,
      "groupPlacementRadius": 1,
      "groupVariance": 0,
      "groupingType": 0,
      "landId": 1,
      "maxDistanceToOtherZones": 0,
      "maxDistanceToPlayers": 0,
      "minDistanceGroupPlacement": 0,
      "minDistanceToPlayers": 0,
      "numberOfGroups": 1,
      "playerId": -1,
      "scalingType": 0,
      "type": 84,
    },
    Object {
      "amount": 1,
      "baseTerrain": -1,
      "groupPlacementRadius": 1,
      "groupVariance": 0,
      "groupingType": 0,
      "landId": 1,
      "maxDistanceToOtherZones": 0,
      "maxDistanceToPlayers": 0,
      "minDistanceGroupPlacement": 0,
      "minDistanceToPlayers": 0,
      "numberOfGroups": 1,
      "playerId": -1,
      "scalingType": 0,
      "type": 104,
    },
    Object {
      "amount": 1,
      "baseTerrain": -1,
      "groupPlacementRadius": 3,
      "groupVariance": 0,
      "groupingType": 0,
      "landId": 1,
      "maxDistanceToOtherZones": 0,
      "maxDistanceToPlayers": 4,
      "minDistanceGroupPlacement": 0,
      "minDistanceToPlayers": 3,
      "numberOfGroups": 1,
      "playerId": -1,
      "scalingType": 0,
      "type": 125,
    },
    Object {
      "amount": 1,
      "baseTerrain": -1,
      "groupPlacementRadius": 3,
      "groupVariance": 0,
      "groupingType": 0,
      "landId": -2,
      "maxDistanceToOtherZones": 0,
      "maxDistanceToPlayers": -1,
      "minDistanceGroupPlacement": 0,
      "minDistanceToPlayers": 5,
      "numberOfGroups": 5000,
      "playerId": -1,
      "scalingType": 1,
      "type": 285,
    },
    Object {
      "amount": 3,
      "baseTerrain": -1,
      "groupPlacementRadius": 1,
      "groupVariance": 0,
      "groupingType": 1,
      "landId": 1,
      "maxDistanceToOtherZones": 0,
      "maxDistanceToPlayers": 10,
      "minDistanceGroupPlacement": 0,
      "minDistanceToPlayers": 5,
      "numberOfGroups": 2,
      "playerId": 0,
      "scalingType": 0,
      "type": 349,
    },
    Object {
      "amount": 5,
      "baseTerrain": -1,
      "groupPlacementRadius": 1,
      "groupVariance": 0,
      "groupingType": 2,
      "landId": 1,
      "maxDistanceToOtherZones": 0,
      "maxDistanceToPlayers": 150,
      "minDistanceGroupPlacement": 0,
      "minDistanceToPlayers": 20,
      "numberOfGroups": 6,
      "playerId": 0,
      "scalingType": 1,
      "type": 349,
    },
  ],
  "sections": Array [
    "players",
    "land",
    "objects",
  ],
  "terrainHotspots": Array [
    Object {
      "fade": 20,
      "radius": 13,
      "x": 84,
      "y": 83,
    },
    Object {
      "fade": 20,
      "radius": 13,
      "x": 35,
      "y": 12,
    },
  ],
  "terrains": Array [],
}
`;

exports[`parse Water Fortress V1 1`] = `
Object {
  "activeLands": Array [
    0,
    1,
    2,
  ],
  "cliffHotspots": Array [
    Object {
      "radius": 15,
      "x": 72,
      "y": 72,
    },
    Object {
      "radius": 15,
      "x": 47,
      "y": 35,
    },
    Object {
      "radius": 15,
      "x": 17,
      "y": 66,
    },
  ],
  "cliffs": Object {},
  "connections": Array [
    Object {
      "terrains": Array [
        Object {
          "replaceTerrain": -1,
          "terrainCost": 1,
          "terrainSize": 1,
          "terrainVariation": 0,
        },
        Object {
          "replaceTerrain": Token {
            "argTypes": Array [
              0,
              0,
              0,
              0,
            ],
            "id": null,
            "name": "SHALLOW",
            "type": 2,
            "value": 4,
          },
          "terrainCost": 7,
          "terrainSize": 4,
          "terrainVariation": 2,
        },
        Object {
          "replaceTerrain": -1,
          "terrainCost": 1,
          "terrainSize": 1,
          "terrainVariation": 0,
        },
        Object {
          "replaceTerrain": -1,
          "terrainCost": 1,
          "terrainSize": 1,
          "terrainVariation": 0,
        },
        Object {
          "replaceTerrain": -1,
          "terrainCost": 1,
          "terrainSize": 1,
          "terrainVariation": 0,
        },
        Object {
          "replaceTerrain": -1,
          "terrainCost": 1,
          "terrainSize": 1,
          "terrainVariation": 0,
        },
        Object {
          "replaceTerrain": -1,
          "terrainCost": 1,
          "terrainSize": 1,
          "terrainVariation": 0,
        },
        Object {
          "replaceTerrain": -1,
          "terrainCost": 1,
          "terrainSize": 1,
          "terrainVariation": 0,
        },
        Object {
          "replaceTerrain": -1,
          "terrainCost": 1,
          "terrainSize": 1,
          "terrainVariation": 0,
        },
        Object {
          "replaceTerrain": -1,
          "terrainCost": 1,
          "terrainSize": 1,
          "terrainVariation": 0,
        },
        Object {
          "replaceTerrain": Token {
            "argTypes": Array [
              0,
              0,
              0,
              0,
            ],
            "id": null,
            "name": "GRASS2",
            "type": 2,
            "value": 12,
          },
          "terrainCost": 4,
          "terrainSize": 4,
          "terrainVariation": 1,
        },
        Object {
          "replaceTerrain": -1,
          "terrainCost": 1,
          "terrainSize": 1,
          "terrainVariation": 0,
        },
        Object {
          "replaceTerrain": -1,
          "terrainCost": 1,
          "terrainSize": 1,
          "terrainVariation": 0,
        },
        Object {
          "replaceTerrain": -1,
          "terrainCost": 1,
          "terrainSize": 1,
          "terrainVariation": 0,
        },
        Object {
          "replaceTerrain": -1,
          "terrainCost": 1,
          "terrainSize": 1,
          "terrainVariation": 0,
        },
        Object {
          "replaceTerrain": -1,
          "terrainCost": 1,
          "terrainSize": 1,
          "terrainVariation": 0,
        },
        Object {
          "replaceTerrain": -1,
          "terrainCost": 1,
          "terrainSize": 1,
          "terrainVariation": 0,
        },
        Object {
          "replaceTerrain": -1,
          "terrainCost": 1,
          "terrainSize": 1,
          "terrainVariation": 0,
        },
        Object {
          "replaceTerrain": -1,
          "terrainCost": 1,
          "terrainSize": 1,
          "terrainVariation": 0,
        },
        Object {
          "replaceTerrain": -1,
          "terrainCost": 1,
          "terrainSize": 1,
          "terrainVariation": 0,
        },
        Object {
          "replaceTerrain": -1,
          "terrainCost": 1,
          "terrainSize": 1,
          "terrainVariation": 0,
        },
        Object {
          "replaceTerrain": -1,
          "terrainCost": 1,
          "terrainSize": 1,
          "terrainVariation": 0,
        },
        Object {
          "replaceTerrain": Token {
            "argTypes": Array [
              0,
              0,
              0,
              0,
            ],
            "id": null,
            "name": "SHALLOW",
            "type": 2,
            "value": 4,
          },
          "terrainCost": 5,
          "terrainSize": 3,
          "terrainVariation": 2,
        },
        Object {
          "replaceTerrain": Token {
            "argTypes": Array [
              0,
              0,
              0,
              0,
            ],
            "id": null,
            "name": "SHALLOW",
            "type": 2,
            "value": 4,
          },
          "terrainCost": 6,
          "terrainSize": 4,
          "terrainVariation": 2,
        },
        Object {
          "replaceTerrain": -1,
          "terrainCost": 1,
          "terrainSize": 1,
          "terrainVariation": 0,
        },
        Object {
          "replaceTerrain": -1,
          "terrainCost": 1,
          "terrainSize": 1,
          "terrainVariation": 0,
        },
        Object {
          "replaceTerrain": -1,
          "terrainCost": 1,
          "terrainSize": 1,
          "terrainVariation": 0,
        },
        Object {
          "replaceTerrain": -1,
          "terrainCost": 1,
          "terrainSize": 1,
          "terrainVariation": 0,
        },
        Object {
          "replaceTerrain": -1,
          "terrainCost": 1,
          "terrainSize": 1,
          "terrainVariation": 0,
        },
        Object {
          "replaceTerrain": -1,
          "terrainCost": 1,
          "terrainSize": 1,
          "terrainVariation": 0,
        },
        Object {
          "replaceTerrain": -1,
          "terrainCost": 1,
          "terrainSize": 1,
          "terrainVariation": 0,
        },
        Object {
          "replaceTerrain": -1,
          "terrainCost": 1,
          "terrainSize": 1,
          "terrainVariation": 0,
        },
        Object {
          "replaceTerrain": -1,
          "terrainCost": 1,
          "terrainSize": 1,
          "terrainVariation": 0,
        },
        Object {
          "replaceTerrain": -1,
          "terrainCost": 1,
          "terrainSize": 1,
          "terrainVariation": 0,
        },
        Object {
          "replaceTerrain": -1,
          "terrainCost": 1,
          "terrainSize": 1,
          "terrainVariation": 0,
        },
        Object {
          "replaceTerrain": -1,
          "terrainCost": 1,
          "terrainSize": 1,
          "terrainVariation": 0,
        },
        Object {
          "replaceTerrain": -1,
          "terrainCost": 1,
          "terrainSize": 1,
          "terrainVariation": 0,
        },
        Object {
          "replaceTerrain": -1,
          "terrainCost": 1,
          "terrainSize": 1,
          "terrainVariation": 0,
        },
        Object {
          "replaceTerrain": -1,
          "terrainCost": 1,
          "terrainSize": 1,
          "terrainVariation": 0,
        },
        Object {
          "replaceTerrain": -1,
          "terrainCost": 1,
          "terrainSize": 1,
          "terrainVariation": 0,
        },
        Object {
          "replaceTerrain": -1,
          "terrainCost": 1,
          "terrainSize": 1,
          "terrainVariation": 0,
        },
        Object {
          "replaceTerrain": -1,
          "terrainCost": 1,
          "terrainSize": 1,
          "terrainVariation": 0,
        },
        Object {
          "replaceTerrain": -1,
          "terrainCost": 1,
          "terrainSize": 1,
          "terrainVariation": 0,
        },
        Object {
          "replaceTerrain": -1,
          "terrainCost": 1,
          "terrainSize": 1,
          "terrainVariation": 0,
        },
        Object {
          "replaceTerrain": -1,
          "terrainCost": 1,
          "terrainSize": 1,
          "terrainVariation": 0,
        },
        Object {
          "replaceTerrain": -1,
          "terrainCost": 1,
          "terrainSize": 1,
          "terrainVariation": 0,
        },
        Object {
          "replaceTerrain": -1,
          "terrainCost": 1,
          "terrainSize": 1,
          "terrainVariation": 0,
        },
        Object {
          "replaceTerrain": -1,
          "terrainCost": 1,
          "terrainSize": 1,
          "terrainVariation": 0,
        },
        Object {
          "replaceTerrain": -1,
          "terrainCost": 1,
          "terrainSize": 1,
          "terrainVariation": 0,
        },
        Object {
          "replaceTerrain": -1,
          "terrainCost": 1,
          "terrainSize": 1,
          "terrainVariation": 0,
        },
        Object {
          "replaceTerrain": -1,
          "terrainCost": 1,
          "terrainSize": 1,
          "terrainVariation": 0,
        },
        Object {
          "replaceTerrain": -1,
          "terrainCost": 1,
          "terrainSize": 1,
          "terrainVariation": 0,
        },
        Object {
          "replaceTerrain": -1,
          "terrainCost": 1,
          "terrainSize": 1,
          "terrainVariation": 0,
        },
        Object {
          "replaceTerrain": -1,
          "terrainCost": 1,
          "terrainSize": 1,
          "terrainVariation": 0,
        },
        Object {
          "replaceTerrain": -1,
          "terrainCost": 1,
          "terrainSize": 1,
          "terrainVariation": 0,
        },
        Object {
          "replaceTerrain": -1,
          "terrainCost": 1,
          "terrainSize": 1,
          "terrainVariation": 0,
        },
        Object {
          "replaceTerrain": -1,
          "terrainCost": 1,
          "terrainSize": 1,
          "terrainVariation": 0,
        },
        Object {
          "replaceTerrain": -1,
          "terrainCost": 1,
          "terrainSize": 1,
          "terrainVariation": 0,
        },
        Object {
          "replaceTerrain": -1,
          "terrainCost": 1,
          "terrainSize": 1,
          "terrainVariation": 0,
        },
        Object {
          "replaceTerrain": -1,
          "terrainCost": 1,
          "terrainSize": 1,
          "terrainVariation": 0,
        },
        Object {
          "replaceTerrain": -1,
          "terrainCost": 1,
          "terrainSize": 1,
          "terrainVariation": 0,
        },
        Object {
          "replaceTerrain": -1,
          "terrainCost": 1,
          "terrainSize": 1,
          "terrainVariation": 0,
        },
        Object {
          "replaceTerrain": -1,
          "terrainCost": 1,
          "terrainSize": 1,
          "terrainVariation": 0,
        },
        Object {
          "replaceTerrain": -1,
          "terrainCost": 1,
          "terrainSize": 1,
          "terrainVariation": 0,
        },
        Object {
          "replaceTerrain": -1,
          "terrainCost": 1,
          "terrainSize": 1,
          "terrainVariation": 0,
        },
        Object {
          "replaceTerrain": -1,
          "terrainCost": 1,
          "terrainSize": 1,
          "terrainVariation": 0,
        },
        Object {
          "replaceTerrain": -1,
          "terrainCost": 1,
          "terrainSize": 1,
          "terrainVariation": 0,
        },
        Object {
          "replaceTerrain": -1,
          "terrainCost": 1,
          "terrainSize": 1,
          "terrainVariation": 0,
        },
        Object {
          "replaceTerrain": -1,
          "terrainCost": 1,
          "terrainSize": 1,
          "terrainVariation": 0,
        },
        Object {
          "replaceTerrain": -1,
          "terrainCost": 1,
          "terrainSize": 1,
          "terrainVariation": 0,
        },
        Object {
          "replaceTerrain": -1,
          "terrainCost": 1,
          "terrainSize": 1,
          "terrainVariation": 0,
        },
        Object {
          "replaceTerrain": -1,
          "terrainCost": 1,
          "terrainSize": 1,
          "terrainVariation": 0,
        },
        Object {
          "replaceTerrain": -1,
          "terrainCost": 1,
          "terrainSize": 1,
          "terrainVariation": 0,
        },
        Object {
          "replaceTerrain": -1,
          "terrainCost": 1,
          "terrainSize": 1,
          "terrainVariation": 0,
        },
        Object {
          "replaceTerrain": -1,
          "terrainCost": 1,
          "terrainSize": 1,
          "terrainVariation": 0,
        },
        Object {
          "replaceTerrain": -1,
          "terrainCost": 1,
          "terrainSize": 1,
          "terrainVariation": 0,
        },
        Object {
          "replaceTerrain": -1,
          "terrainCost": 1,
          "terrainSize": 1,
          "terrainVariation": 0,
        },
        Object {
          "replaceTerrain": -1,
          "terrainCost": 1,
          "terrainSize": 1,
          "terrainVariation": 0,
        },
        Object {
          "replaceTerrain": -1,
          "terrainCost": 1,
          "terrainSize": 1,
          "terrainVariation": 0,
        },
        Object {
          "replaceTerrain": -1,
          "terrainCost": 1,
          "terrainSize": 1,
          "terrainVariation": 0,
        },
        Object {
          "replaceTerrain": -1,
          "terrainCost": 1,
          "terrainSize": 1,
          "terrainVariation": 0,
        },
        Object {
          "replaceTerrain": -1,
          "terrainCost": 1,
          "terrainSize": 1,
          "terrainVariation": 0,
        },
        Object {
          "replaceTerrain": -1,
          "terrainCost": 1,
          "terrainSize": 1,
          "terrainVariation": 0,
        },
        Object {
          "replaceTerrain": -1,
          "terrainCost": 1,
          "terrainSize": 1,
          "terrainVariation": 0,
        },
        Object {
          "replaceTerrain": -1,
          "terrainCost": 1,
          "terrainSize": 1,
          "terrainVariation": 0,
        },
        Object {
          "replaceTerrain": -1,
          "terrainCost": 1,
          "terrainSize": 1,
          "terrainVariation": 0,
        },
        Object {
          "replaceTerrain": -1,
          "terrainCost": 1,
          "terrainSize": 1,
          "terrainVariation": 0,
        },
        Object {
          "replaceTerrain": -1,
          "terrainCost": 1,
          "terrainSize": 1,
          "terrainVariation": 0,
        },
        Object {
          "replaceTerrain": -1,
          "terrainCost": 1,
          "terrainSize": 1,
          "terrainVariation": 0,
        },
        Object {
          "replaceTerrain": -1,
          "terrainCost": 1,
          "terrainSize": 1,
          "terrainVariation": 0,
        },
        Object {
          "replaceTerrain": -1,
          "terrainCost": 1,
          "terrainSize": 1,
          "terrainVariation": 0,
        },
        Object {
          "replaceTerrain": -1,
          "terrainCost": 1,
          "terrainSize": 1,
          "terrainVariation": 0,
        },
        Object {
          "replaceTerrain": -1,
          "terrainCost": 1,
          "terrainSize": 1,
          "terrainVariation": 0,
        },
        Object {
          "replaceTerrain": -1,
          "terrainCost": 1,
          "terrainSize": 1,
          "terrainVariation": 0,
        },
        Object {
          "replaceTerrain": -1,
          "terrainCost": 1,
          "terrainSize": 1,
          "terrainVariation": 0,
        },
        Object {
          "replaceTerrain": -1,
          "terrainCost": 1,
          "terrainSize": 1,
          "terrainVariation": 0,
        },
        Object {
          "replaceTerrain": -1,
          "terrainCost": 1,
          "terrainSize": 1,
          "terrainVariation": 0,
        },
        Object {
          "replaceTerrain": -1,
          "terrainCost": 1,
          "terrainSize": 1,
          "terrainVariation": 0,
        },
        Object {
          "replaceTerrain": -1,
          "terrainCost": 1,
          "terrainSize": 1,
          "terrainVariation": 0,
        },
      ],
      "type": 66,
    },
  ],
  "elevationHotspots": Array [
    Object {
      "fade": 20,
      "radius": 13,
      "x": 72,
      "y": 72,
    },
    Object {
      "fade": 20,
      "radius": 13,
      "x": 47,
      "y": 35,
    },
  ],
  "elevations": Array [],
  "landMeta": Object {
    "baseTerrain": 1,
  },
  "lands": Array [
    Object {
      "area": 7,
      "baseSize": 17,
      "borderFuzziness": 100,
      "bottomBorder": 108,
      "clumpiness": 15,
      "leftBorder": 12,
      "minPlacementDistance": -1,
      "position": Object {
        "x": 72,
        "y": 72,
      },
      "rightBorder": 108,
      "terrain": 12,
      "tiles": 4800,
      "topBorder": 12,
      "zone": 1,
    },
    Object {
      "area": 7,
      "baseSize": 17,
      "borderFuzziness": 100,
      "bottomBorder": 108,
      "clumpiness": 15,
      "leftBorder": 12,
      "minPlacementDistance": -1,
      "position": Object {
        "x": 47,
        "y": 35,
      },
      "rightBorder": 108,
      "terrain": 12,
      "tiles": 4800,
      "topBorder": 12,
      "zone": 2,
    },
    Object {
      "area": 7,
      "baseSize": 3,
      "borderFuzziness": 20,
      "bottomBorder": 108,
      "clumpiness": 8,
      "leftBorder": 12,
      "minPlacementDistance": -1,
      "position": Object {
        "x": 17,
        "y": 66,
      },
      "rightBorder": 108,
      "terrain": 12,
      "tiles": 4800,
      "topBorder": 12,
      "zone": 0,
    },
  ],
  "objectHotspots": Array [
    Object {
      "id": 1,
      "playerId": 1,
      "x": 72,
      "y": 72,
    },
    Object {
      "id": 1,
      "playerId": 2,
      "x": 47,
      "y": 35,
    },
    Object {
      "id": 0,
      "playerId": 0,
      "x": 17,
      "y": 66,
    },
  ],
  "objects": Array [
    Object {
      "amount": 1,
      "baseTerrain": -1,
      "groupPlacementRadius": 18,
      "groupVariance": 0,
      "groupingType": 0,
      "landId": 1,
      "maxDistanceToOtherZones": 0,
      "maxDistanceToPlayers": 0,
      "minDistanceGroupPlacement": 0,
      "minDistanceToPlayers": 0,
      "numberOfGroups": 1,
      "playerId": -1,
      "scalingType": 0,
      "type": 109,
    },
    Object {
      "amount": 1,
      "baseTerrain": -1,
      "groupPlacementRadius": 3,
      "groupVariance": 0,
      "groupingType": 0,
      "landId": 1,
      "maxDistanceToOtherZones": 0,
      "maxDistanceToPlayers": 6,
      "minDistanceGroupPlacement": 0,
      "minDistanceToPlayers": 6,
      "numberOfGroups": 1,
      "playerId": -1,
      "scalingType": 0,
      "type": 83,
    },
    Object {
      "amount": 1,
      "baseTerrain": -1,
      "groupPlacementRadius": 3,
      "groupVariance": 0,
      "groupingType": 0,
      "landId": 1,
      "maxDistanceToOtherZones": 0,
      "maxDistanceToPlayers": 9,
      "minDistanceGroupPlacement": 0,
      "minDistanceToPlayers": 7,
      "numberOfGroups": 1,
      "playerId": -1,
      "scalingType": 0,
      "type": 448,
    },
    Object {
      "amount": 1,
      "baseTerrain": -1,
      "groupPlacementRadius": 3,
      "groupVariance": 0,
      "groupingType": 0,
      "landId": 1,
      "maxDistanceToOtherZones": 0,
      "maxDistanceToPlayers": 16,
      "minDistanceGroupPlacement": 0,
      "minDistanceToPlayers": 16,
      "numberOfGroups": 99999,
      "playerId": -1,
      "scalingType": 0,
      "type": 117,
    },
    Object {
      "amount": 1,
      "baseTerrain": -1,
      "groupPlacementRadius": 3,
      "groupVariance": 0,
      "groupingType": 0,
      "landId": -2,
      "maxDistanceToOtherZones": 0,
      "maxDistanceToPlayers": -1,
      "minDistanceGroupPlacement": 0,
      "minDistanceToPlayers": 25,
      "numberOfGroups": 5,
      "playerId": -1,
      "scalingType": 0,
      "type": 285,
    },
    Object {
      "amount": 6,
      "baseTerrain": -1,
      "groupPlacementRadius": 3,
      "groupVariance": 0,
      "groupingType": 2,
      "landId": 1,
      "maxDistanceToOtherZones": 0,
      "maxDistanceToPlayers": 12,
      "minDistanceGroupPlacement": 6,
      "minDistanceToPlayers": 10,
      "numberOfGroups": 1,
      "playerId": 0,
      "scalingType": 0,
      "type": 59,
    },
    Object {
      "amount": 1,
      "baseTerrain": -1,
      "groupPlacementRadius": 3,
      "groupVariance": 0,
      "groupingType": 0,
      "landId": 1,
      "maxDistanceToOtherZones": 0,
      "maxDistanceToPlayers": 15,
      "minDistanceGroupPlacement": 0,
      "minDistanceToPlayers": 14,
      "numberOfGroups": 1,
      "playerId": 0,
      "scalingType": 0,
      "type": 48,
    },
    Object {
      "amount": 1,
      "baseTerrain": -1,
      "groupPlacementRadius": 3,
      "groupVariance": 0,
      "groupingType": 1,
      "landId": 1,
      "maxDistanceToOtherZones": 0,
      "maxDistanceToPlayers": 15,
      "minDistanceGroupPlacement": 0,
      "minDistanceToPlayers": 14,
      "numberOfGroups": 1,
      "playerId": 0,
      "scalingType": 0,
      "type": 48,
    },
    Object {
      "amount": 5,
      "baseTerrain": -1,
      "groupPlacementRadius": 2,
      "groupVariance": 0,
      "groupingType": 2,
      "landId": 1,
      "maxDistanceToOtherZones": 0,
      "maxDistanceToPlayers": 15,
      "minDistanceGroupPlacement": 7,
      "minDistanceToPlayers": 14,
      "numberOfGroups": 1,
      "playerId": 0,
      "scalingType": 0,
      "type": 102,
    },
    Object {
      "amount": 7,
      "baseTerrain": -1,
      "groupPlacementRadius": 3,
      "groupVariance": 0,
      "groupingType": 2,
      "landId": 1,
      "maxDistanceToOtherZones": 0,
      "maxDistanceToPlayers": 15,
      "minDistanceGroupPlacement": 7,
      "minDistanceToPlayers": 14,
      "numberOfGroups": 1,
      "playerId": 0,
      "scalingType": 0,
      "type": 66,
    },
    Object {
      "amount": 4,
      "baseTerrain": -1,
      "groupPlacementRadius": 2,
      "groupVariance": 0,
      "groupingType": 2,
      "landId": 1,
      "maxDistanceToOtherZones": 0,
      "maxDistanceToPlayers": 15,
      "minDistanceGroupPlacement": 14,
      "minDistanceToPlayers": 10,
      "numberOfGroups": 1,
      "playerId": 0,
      "scalingType": 0,
      "type": 102,
    },
    Object {
      "amount": 4,
      "baseTerrain": -1,
      "groupPlacementRadius": 3,
      "groupVariance": 0,
      "groupingType": 2,
      "landId": 1,
      "maxDistanceToOtherZones": 0,
      "maxDistanceToPlayers": 15,
      "minDistanceGroupPlacement": 7,
      "minDistanceToPlayers": 10,
      "numberOfGroups": 1,
      "playerId": 0,
      "scalingType": 0,
      "type": 66,
    },
    Object {
      "amount": 4,
      "baseTerrain": -1,
      "groupPlacementRadius": 3,
      "groupVariance": 0,
      "groupingType": 2,
      "landId": 1,
      "maxDistanceToOtherZones": 0,
      "maxDistanceToPlayers": 15,
      "minDistanceGroupPlacement": 7,
      "minDistanceToPlayers": 10,
      "numberOfGroups": 1,
      "playerId": 0,
      "scalingType": 0,
      "type": 66,
    },
    Object {
      "amount": 4,
      "baseTerrain": -1,
      "groupPlacementRadius": 3,
      "groupVariance": 0,
      "groupingType": 1,
      "landId": 1,
      "maxDistanceToOtherZones": 0,
      "maxDistanceToPlayers": 10,
      "minDistanceGroupPlacement": 0,
      "minDistanceToPlayers": 8,
      "numberOfGroups": 1,
      "playerId": 0,
      "scalingType": 0,
      "type": 594,
    },
    Object {
      "amount": 2,
      "baseTerrain": -1,
      "groupPlacementRadius": 3,
      "groupVariance": 0,
      "groupingType": 1,
      "landId": 1,
      "maxDistanceToOtherZones": 0,
      "maxDistanceToPlayers": 20,
      "minDistanceGroupPlacement": 0,
      "minDistanceToPlayers": 12,
      "numberOfGroups": 2,
      "playerId": 0,
      "scalingType": 0,
      "type": 594,
    },
    Object {
      "amount": 4,
      "baseTerrain": -1,
      "groupPlacementRadius": 3,
      "groupVariance": 0,
      "groupingType": 1,
      "landId": 1,
      "maxDistanceToOtherZones": 0,
      "maxDistanceToPlayers": 18,
      "minDistanceGroupPlacement": 9,
      "minDistanceToPlayers": 14,
      "numberOfGroups": 1,
      "playerId": 0,
      "scalingType": 0,
      "type": 65,
    },
    Object {
      "amount": 4,
      "baseTerrain": -1,
      "groupPlacementRadius": 3,
      "groupVariance": 1,
      "groupingType": 1,
      "landId": 1,
      "maxDistanceToOtherZones": 0,
      "maxDistanceToPlayers": -1,
      "minDistanceGroupPlacement": 9,
      "minDistanceToPlayers": 40,
      "numberOfGroups": 1,
      "playerId": 0,
      "scalingType": 0,
      "type": 65,
    },
    Object {
      "amount": 1,
      "baseTerrain": -1,
      "groupPlacementRadius": 3,
      "groupVariance": 0,
      "groupingType": 0,
      "landId": 1,
      "maxDistanceToOtherZones": 0,
      "maxDistanceToPlayers": 5,
      "minDistanceGroupPlacement": 2,
      "minDistanceToPlayers": 4,
      "numberOfGroups": 2,
      "playerId": 0,
      "scalingType": 0,
      "type": 349,
    },
    Object {
      "amount": 1,
      "baseTerrain": -1,
      "groupPlacementRadius": 3,
      "groupVariance": 0,
      "groupingType": 0,
      "landId": 1,
      "maxDistanceToOtherZones": 0,
      "maxDistanceToPlayers": 8,
      "minDistanceGroupPlacement": 2,
      "minDistanceToPlayers": 6,
      "numberOfGroups": 3,
      "playerId": 0,
      "scalingType": 0,
      "type": 350,
    },
    Object {
      "amount": 1,
      "baseTerrain": 12,
      "groupPlacementRadius": 3,
      "groupVariance": 0,
      "groupingType": 0,
      "landId": -2,
      "maxDistanceToOtherZones": 0,
      "maxDistanceToPlayers": -1,
      "minDistanceGroupPlacement": 2,
      "minDistanceToPlayers": 8,
      "numberOfGroups": 12,
      "playerId": 0,
      "scalingType": 1,
      "type": 348,
    },
    Object {
      "amount": 1,
      "baseTerrain": -1,
      "groupPlacementRadius": 3,
      "groupVariance": 0,
      "groupingType": 0,
      "landId": -2,
      "maxDistanceToOtherZones": 0,
      "maxDistanceToPlayers": -1,
      "minDistanceGroupPlacement": 0,
      "minDistanceToPlayers": 8,
      "numberOfGroups": 18,
      "playerId": 0,
      "scalingType": 1,
      "type": 350,
    },
    Object {
      "amount": 5,
      "baseTerrain": -1,
      "groupPlacementRadius": 3,
      "groupVariance": 0,
      "groupingType": 2,
      "landId": -2,
      "maxDistanceToOtherZones": 0,
      "maxDistanceToPlayers": 120,
      "minDistanceGroupPlacement": 9,
      "minDistanceToPlayers": 40,
      "numberOfGroups": 1,
      "playerId": 0,
      "scalingType": 0,
      "type": 59,
    },
    Object {
      "amount": 1,
      "baseTerrain": -1,
      "groupPlacementRadius": 2,
      "groupVariance": 0,
      "groupingType": 2,
      "landId": -2,
      "maxDistanceToOtherZones": 0,
      "maxDistanceToPlayers": -1,
      "minDistanceGroupPlacement": 24,
      "minDistanceToPlayers": 40,
      "numberOfGroups": 1,
      "playerId": 0,
      "scalingType": 0,
      "type": 66,
    },
    Object {
      "amount": 4,
      "baseTerrain": -1,
      "groupPlacementRadius": 2,
      "groupVariance": 1,
      "groupingType": 2,
      "landId": -2,
      "maxDistanceToOtherZones": 0,
      "maxDistanceToPlayers": -1,
      "minDistanceGroupPlacement": 24,
      "minDistanceToPlayers": 40,
      "numberOfGroups": 1,
      "playerId": 0,
      "scalingType": 0,
      "type": 102,
    },
    Object {
      "amount": 1,
      "baseTerrain": -1,
      "groupPlacementRadius": 3,
      "groupVariance": 0,
      "groupingType": 1,
      "landId": -2,
      "maxDistanceToOtherZones": 0,
      "maxDistanceToPlayers": 120,
      "minDistanceGroupPlacement": 12,
      "minDistanceToPlayers": 40,
      "numberOfGroups": 3,
      "playerId": 0,
      "scalingType": 1,
      "type": 126,
    },
    Object {
      "amount": 1,
      "baseTerrain": -1,
      "groupPlacementRadius": 3,
      "groupVariance": 0,
      "groupingType": 0,
      "landId": 1,
      "maxDistanceToOtherZones": 0,
      "maxDistanceToPlayers": 40,
      "minDistanceGroupPlacement": 12,
      "minDistanceToPlayers": 30,
      "numberOfGroups": 2,
      "playerId": 0,
      "scalingType": 0,
      "type": 126,
    },
    Object {
      "amount": 1,
      "baseTerrain": -1,
      "groupPlacementRadius": 3,
      "groupVariance": 0,
      "groupingType": 0,
      "landId": -1,
      "maxDistanceToOtherZones": 4,
      "maxDistanceToPlayers": -1,
      "minDistanceGroupPlacement": 0,
      "minDistanceToPlayers": -1,
      "numberOfGroups": 13,
      "playerId": 0,
      "scalingType": 1,
      "type": 455,
    },
    Object {
      "amount": 1,
      "baseTerrain": -1,
      "groupPlacementRadius": 3,
      "groupVariance": 0,
      "groupingType": 0,
      "landId": -1,
      "maxDistanceToOtherZones": 4,
      "maxDistanceToPlayers": -1,
      "minDistanceGroupPlacement": 0,
      "minDistanceToPlayers": -1,
      "numberOfGroups": 12,
      "playerId": 0,
      "scalingType": 1,
      "type": 457,
    },
    Object {
      "amount": 1,
      "baseTerrain": -1,
      "groupPlacementRadius": 3,
      "groupVariance": 0,
      "groupingType": 0,
      "landId": -1,
      "maxDistanceToOtherZones": 4,
      "maxDistanceToPlayers": -1,
      "minDistanceGroupPlacement": 0,
      "minDistanceToPlayers": -1,
      "numberOfGroups": 12,
      "playerId": 0,
      "scalingType": 1,
      "type": 458,
    },
    Object {
      "amount": 1,
      "baseTerrain": -1,
      "groupPlacementRadius": 3,
      "groupVariance": 0,
      "groupingType": 0,
      "landId": -1,
      "maxDistanceToOtherZones": 0,
      "maxDistanceToPlayers": -1,
      "minDistanceGroupPlacement": 3,
      "minDistanceToPlayers": -1,
      "numberOfGroups": 32,
      "playerId": 0,
      "scalingType": 1,
      "type": 69,
    },
    Object {
      "amount": 1,
      "baseTerrain": -1,
      "groupPlacementRadius": 3,
      "groupVariance": 0,
      "groupingType": 1,
      "landId": -1,
      "maxDistanceToOtherZones": 7,
      "maxDistanceToPlayers": -1,
      "minDistanceGroupPlacement": 10,
      "minDistanceToPlayers": -1,
      "numberOfGroups": 8,
      "playerId": 0,
      "scalingType": 1,
      "type": 450,
    },
    Object {
      "amount": 1,
      "baseTerrain": -1,
      "groupPlacementRadius": 3,
      "groupVariance": 0,
      "groupingType": 1,
      "landId": -1,
      "maxDistanceToOtherZones": 7,
      "maxDistanceToPlayers": -1,
      "minDistanceGroupPlacement": 10,
      "minDistanceToPlayers": -1,
      "numberOfGroups": 8,
      "playerId": 0,
      "scalingType": 1,
      "type": 451,
    },
    Object {
      "amount": 1,
      "baseTerrain": -1,
      "groupPlacementRadius": 3,
      "groupVariance": 0,
      "groupingType": 0,
      "landId": -1,
      "maxDistanceToOtherZones": 0,
      "maxDistanceToPlayers": -1,
      "minDistanceGroupPlacement": 0,
      "minDistanceToPlayers": -1,
      "numberOfGroups": 6,
      "playerId": -1,
      "scalingType": 1,
      "type": 96,
    },
  ],
  "sections": Array [
    "players",
    "land",
    "terrain",
    "objects",
    "connections",
  ],
  "terrainHotspots": Array [
    Object {
      "fade": 20,
      "radius": 13,
      "x": 72,
      "y": 72,
    },
    Object {
      "fade": 20,
      "radius": 13,
      "x": 47,
      "y": 35,
    },
  ],
  "terrains": Array [
    Object {
      "avoidPlayerStartAreas": true,
      "baseTerrain": 12,
      "clumpiness": 100,
      "flatOnly": false,
      "maxHeight": 0,
      "minHeight": 0,
      "numberOfClumps": 100,
      "scalingType": 1,
      "spacingToOtherTerrainTypes": 7,
      "tiles": 14400,
      "type": 10,
    },
    Object {
      "avoidPlayerStartAreas": false,
      "baseTerrain": 1,
      "clumpiness": 20,
      "flatOnly": false,
      "maxHeight": 0,
      "minHeight": 0,
      "numberOfClumps": 19,
      "scalingType": 0,
      "spacingToOtherTerrainTypes": 2,
      "tiles": 8640,
      "type": 23,
    },
    Object {
      "avoidPlayerStartAreas": false,
      "baseTerrain": 23,
      "clumpiness": 20,
      "flatOnly": false,
      "maxHeight": 0,
      "minHeight": 0,
      "numberOfClumps": 10,
      "scalingType": 0,
      "spacingToOtherTerrainTypes": 3,
      "tiles": 4320,
      "type": 22,
    },
  ],
}
`;
